[project]
name = 'our-first-project'
version = '0.0.1'
description = 'Our first Python project, using meson-python!'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
  {name = 'Bowsette Koopa', email = 'bowsette@example.com'},
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "numpy"]

[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686"
