[project]
name = "fortran-cpython-extension"
version = "0.1.0"
description = "Our first Fortran project, using meson-python!"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev"},
]

[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "numpy"]

[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686"

[tool.cibuildwheel.macos]
before-build = "brew install gfortran"
